# prompt_and_control

./: .gitignore  app.py  async_voice_controller.py  gameboard.py  llm.py  main.py  pyproject.toml  test_llm.py  transcript_manager.py  ui_display.py  voice.py
prompts/: system.py
